--- a/style.css
+++ b/style.css
@@ -65,6 +65,19 @@ body {
   font-family: NeueMachina-Ultrabold;
 }
 
+.homeDisplayContainer {
+  height: 384px;
+  width: 100%;
+  max-width: 602px;
+  position: fixed;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+  font-family: NeueMachina-Ultrabold;
+  font-size: 36px;
+  padding-top: 180px;
+
+}
+
 #canvasContainer {
   position: fixed;
   top: 64px;
@@ -216,6 +229,7 @@ body {
 
 }
 
+
 @media screen and (max-width: 600px) {
 
   .headerContainer {
@@ -223,11 +237,19 @@ body {
     border-right: 1px solid #7c7d73;
   }
 
+  .homeDisplayContainer {
+    border-left: 0px solid black;
+    border-right: 0px solid black;
+
+  }
+
   #canvasContainer {
     border-left: 0px solid black;
     border-right: 0px solid black;
 
   }
+
+
 
   .introductionContainer {
     border-left: 1px solid #7c7d73;
